--- a/webdesign/index.html
+++ b/webdesign/index.html
@@ -3,12 +3,12 @@
 <head>
 	<meta charset="UTF-8">
 	<title>My first page</title>
-	<link rel="icon" type="image/png" href="Images/Untitled.png">
+	<link rel="icon" type="image/png" href="images/Untitled.png">
 </head>
 <body>
 	<main><p>This is my main code</p></main>
 	<figure>
-		<img src="Images/image1.jpeg"
+		<img src="images/image1.jpeg"
 			width="50%" alt="Me">
 		<figcaption>Relative image size</figcaption>
 	</figure>
